--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>my_app</title>
+  <title>La Gata - Sistema de Facturación</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Material Design Icons Font -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
